@@ -537,6 +537,7 @@ extern int _ged_results_add(struct ged_results *results, const char *result_stri
 
 extern int _ged_brep_to_csg(struct ged *gedp, const char *obj_name, int verify);
 extern int _ged_brep_tikz(struct ged *gedp, const char *obj_name, const char *outfile);
+extern int _ged_brep_flip(struct ged *gedp, struct rt_brep_internal *bi, const char *obj_name);
 
 
 /* defined in ged_util.c */
