@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 20XX-XX-XX  Release 7.30.2                                     ---
 ----------------------------------------------------------------------
 
+* added a 'flip' normals command to MGED's brep command - Cliff Yapp
 * added rtweight support for in-.g density information - Cliff Yapp
 * improved usability of vol primitives w/ missing data - Sean Morrison
 
